# jackrabbit

./: .env.client.example  .env.example  .gitignore  QUICKSTART.md  README.md  Taskfile.yml  compose.yml  go.work  go.work.sum  test-command.json  test-e2e.ps1  test-e2e.sh  test-register.json
client/: .env.example  Dockerfile  README.md  go.mod  go.sum
client/cmd/runner/: main.go
client/internal/config/: config.go
client/internal/runner/: executor.go  lifecycle.go  sse.go
client/internal/shipper/: logs.go  metrics.go
openapi/: hey-api.config.ts  oapi-codegen.yaml  openapi.yaml
sdk/: README.md
sdk/go/: client.go  go.mod
sdk/python/: README.md  pyproject.toml
sdk/python/runner_sdk/: __init__.py  client.py
sdk/python/runner_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/typescript/: package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts
server/: Dockerfile  go.mod  go.sum
server/cmd/server/: main.go
server/internal/api/handlers/: auth.go  commands.go  health.go  (+1 more)
server/internal/config/: config.go
server/internal/models/: models.go
server/internal/store/: interface.go
server/internal/workers/: reaper.go  retention.go  rollup.go
server/migrations/: 001_create_runners.down.sql  001_create_runners.up.sql  002_create_commands.up.sql  003_create_logs.up.sql  004_create_metrics.up.sql  005_create_metric_rollups.down.sql  005_create_metric_rollups.up.sql  006_create_log_retention_policies.down.sql  006_create_log_retention_policies.up.sql
traefik/: dynamic.yml
ui/: index.html  nginx.conf
(+4 files in other folders)
